--- a/overlay.html
+++ b/overlay.html
@@ -1,3 +1,3 @@
 <div id="overlayDiv" style="position: absolute; top:0; left:0; width:100%; height: 100%; z-index:9999; pointer-events: none;">
-    <h1>IT WORKEDDD</h1>
+    <img id="catImage" src="" style="position:absolute; bottom:0; width:200px; height:200px;">
 </div>
