--- a/overlay.html
+++ b/overlay.html
@@ -1,3 +1,7 @@
 <div id="overlayDiv" style="position: absolute; top:0; left:0; width:100%; height: 100%; z-index:9999; pointer-events: none;">
-    <img id="catImage" src="" style="position:absolute; bottom:0; width:200px; height:200px;">
+    <img id="catImage" src="" style="position:absolute; bottom:0; width:200px; height:200px; pointer-events:auto;">
+
+    <div id="catMenu" style="display: none; position:absolute; left:50px; bottom:200px; width:200px; height:50px; pointer-events:none; background-color:red;">
+        <p>MENU!</p>
+    </div>
 </div>
