--- a/overlay.html
+++ b/overlay.html
@@ -1,8 +1,10 @@
-<div id="overlayDiv" style="position: absolute; top:0; left:0; width:100%; height: 100%; z-index:9999; pointer-events: none;">
-    <img id="catImage" src="" style="position:absolute; bottom:0; width:200px; height:200px; pointer-events:auto;">
+<div id="overlayDiv" style="position: fixed; top:0; left:0; width:100%; height: 100%; z-index:9999; pointer-events: none;">
+    <div id="catContainer" style="position:fixed; bottom:0; width:200px; height:200px;">
+        <img id="catImage" src="" style="width:100%; height:100%; pointer-events:auto;">
 
-    <div id="catMenu" style="display: none; position:absolute; left:50px; bottom:230px; width:300px; height:50px; pointer-events:none;">
-        <img id="settingsButton" src="" style="width:64px; height:64px; position:absolute;left:80px; pointer-events:auto;">
-        <img id="calendarButton" src="" style="width:64px; height:64px; position:absolute;left:140px; top:30px; pointer-events:auto;">
+        <div id="catMenu" style="display: none; position:absolute; left:50px; bottom:230px; width:300px; height:50px; pointer-events:none;">
+            <img id="settingsButton" src="" style="width:64px; height:64px; position:absolute;left:80px; pointer-events:auto;">
+            <img id="calendarButton" src="" style="width:64px; height:64px; position:absolute;left:140px; top:30px; pointer-events:auto;">
+        </div>
     </div>
 </div>
