Added settings menu anim

--- a/overlay.html
+++ b/overlay.html
@@ -6,5 +6,11 @@
             <img id="settingsButton" src="" style="width:64px; height:64px; position:absolute;left:80px; pointer-events:auto;">
             <img id="calendarButton" src="" style="width:64px; height:64px; position:absolute;left:140px; top:30px; pointer-events:auto;">
         </div>
+
+        <div id="settingsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center;">
+            <div style="padding:60px; padding-top:90px; pointer-events:auto;">
+                <p>Settings</p>
+            </div>
+        </div>
     </div>
 </div>
