Fixed setting smenu

--- a/overlay.html
+++ b/overlay.html
@@ -8,8 +8,8 @@
         </div>
 
         <div id="settingsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center;">
-            <div style="padding:60px; padding-top:90px; pointer-events:auto;">
-                <p>Settings</p>
+            <div id="settingsInterior" style="display:none; padding:60px; padding-top:80px; pointer-events:auto;">
+                <p style="text-align:center; font-size:30px;">Settings</p>
             </div>
         </div>
     </div>
