timespent is displaying and saving

--- a/overlay.html
+++ b/overlay.html
@@ -10,6 +10,9 @@
         <div id="settingsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center;">
             <div id="settingsInterior" style="display:none; padding:60px; padding-top:80px; pointer-events:auto;">
                 <p style="text-align:center; font-size:30px;">Settings</p>
+                <ul id="time-list">
+                    <!-- This will be dynamically filled with time spent on websites -->
+                </ul>
             </div>
         </div>
     </div>
