sorting implemented and changed ui

--- a/overlay.html
+++ b/overlay.html
@@ -8,9 +8,9 @@
             <img id="calendarButton" src="" style="width:64px; height:64px; position:absolute; left:80px; top:10px; pointer-events:auto;">
         </div>
 
-        <div id="settingsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center;">
-            <div id="settingsInterior" style="display:none; padding:60px; padding-top:80px; pointer-events:auto;">
-                <p style="text-align:center; font-size:30px;">Settings</p>
+        <div id="statsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center;">
+            <div id="statsInterior" style="display:none; padding:60px; padding-top:80px; pointer-events:auto;">
+                <p style="text-align:center; font-size:30px;">Statistics</p>
                 <ul id="time-list">
                     <!-- This will be filled with time spent on websites -->
                 </ul>
