--- a/overlay.html
+++ b/overlay.html
@@ -2,6 +2,9 @@
     <div id="catContainer" style="position:fixed; bottom:0; width:200px; height:200px;">
         <img id="catImage" src="" style="width:100%; height:100%; pointer-events:auto;">
         <img id="catMenuOpener" src="" style="width:64px; height:64px; position:absolute; left:180px; bottom:150px; pointer-events:auto;">
+        <div id="speechBubble" style="display: none; width:100%; height:80px; position:absolute; left:50px; bottom:230px; padding:10px; background-image: linear-gradient(white, lightblue); border-radius:10px; border-color:lightslategray; border-style:solid;">
+            Meow! This is my text!
+        </div>
         
         <div id="catMenu" style="display: none; position:absolute; left:50px; bottom:230px; width:300px; height:50px; pointer-events:none;">
             <img id="settingsButton" src="" style="width:64px; height:64px; position:absolute; left:10px; top: 20px; pointer-events:auto;">
