--- a/overlay.html
+++ b/overlay.html
@@ -1,7 +1,7 @@
 <div id="overlayDiv" style="position: fixed; top:0; left:0; width:100%; height: 100%; z-index:9999; pointer-events: none;">
-    <div id="catContainer" style="position:fixed; bottom:0; width:200px; height:200px;">
-        <img id="catImage" src="" style="width:100%; height:100%; pointer-events:auto;">
-        <img id="catMenuOpener" src="" style="width:64px; height:64px; position:absolute; left:180px; bottom:150px; pointer-events:auto;">
+    <div id="catContainer" style="position:fixed; bottom:0; width:250px; height:230px;">
+        <img id="catImage" src="" style="width:200px; height:200px; pointer-events:auto;">
+        <img id="catMenuOpener" src="" style="display:none; width:64px; height:64px; position:absolute; left:180px; bottom:150px; pointer-events:auto;">
         <div id="speechBubble" style="display: none; width:100%; height:80px; position:absolute; left:50px; bottom:230px; padding:10px; background-image: linear-gradient(white, lightblue); border-radius:10px; border-color:lightslategray; border-style:solid;">
             Meow! This is my text!
         </div>
