--- a/overlay.html
+++ b/overlay.html
@@ -14,7 +14,7 @@
         <div id="statsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center; justify-content: center; align-items: center;">
             <div id="statsInterior" style="overflow-y:auto; width:300px; height:250px; margin-top:40px; display:flex; flex-direction:column; align-items:center; pointer-events:auto;">
                 <p style="text-align:center; font-size:30px;">Statistics</p>
-                <p style="margin-top: -20px; text-align:center; font-size:20px;">Here's your top websites:</p>
+                <p style="margin-top: -20px; text-align:center; font-size:20px;">Your Top Websites Today</p>
                 <ul id="time-list" style="margin-top: -10px; ">
                     <!-- This will be filled with time spent on websites -->
                 </ul>
