Pie Chart added

--- a/overlay.html
+++ b/overlay.html
@@ -19,7 +19,10 @@
                     <!-- This will be filled with time spent on websites -->
                 </ul>
                 <p style="text-align:center; font-size:30px;">Weekly Breakdown</p>
+                <p style="text-align:center; font-size:20px;">Hours Spent Online</p>
                 <canvas id="weekChartCanvas"></canvas>
+                <p style="text-align:center; font-size:20px;">Website Usage</p>
+                <canvas id="websiteUsageCanvas"></canvas>
             </div>
         </div>
     </div>
