--- a/overlay.html
+++ b/overlay.html
@@ -10,20 +10,20 @@
             <img id="settingsButton" src="" style="width:64px; height:64px; position:absolute; left:10px; top: 20px; pointer-events:auto;">
             <img id="calendarButton" src="" style="width:64px; height:64px; position:absolute; left:80px; top:10px; pointer-events:auto;">
         </div>
+    </div>
 
-        <div id="statsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center; justify-content: center; align-items: center;">
-            <div id="statsInterior" style="overflow-y:auto; width:300px; height:250px; margin-top:40px; display:flex; flex-direction:column; align-items:center; pointer-events:auto;">
-                <p style="text-align:center; font-size:30px;">Statistics</p>
-                <p style="margin-top: -20px; text-align:center; font-size:20px;">Your Top Websites Today</p>
-                <ul id="time-list" style="margin-top: -10px; ">
-                    <!-- This will be filled with time spent on websites -->
-                </ul>
-                <p style="text-align:center; font-size:30px;">Weekly Breakdown</p>
-                <p style="text-align:center; font-size:20px;">Hours Spent Online</p>
-                <canvas id="weekChartCanvas"></canvas>
-                <p style="text-align:center; font-size:20px;">Website Usage</p>
-                <canvas id="websiteUsageCanvas"></canvas>
-            </div>
+    <div id="statsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center; justify-content: center; align-items: center; pointer-events:auto; cursor: move;">
+        <div id="statsInterior" style="overflow-y:auto; width:300px; height:250px; margin-top:40px; display:flex; flex-direction:column; align-items:center; pointer-events:auto;">
+            <p style="text-align:center; font-size:30px;">Statistics</p>
+            <p style="margin-top: -20px; text-align:center; font-size:20px;">Your Top Websites Today</p>
+            <ul id="time-list" style="margin-top: -10px; ">
+                <!-- This will be filled with time spent on websites -->
+            </ul>
+            <p style="text-align:center; font-size:30px;">Weekly Breakdown</p>
+            <p style="text-align:center; font-size:20px;">Hours Spent Online</p>
+            <canvas id="weekChartCanvas"></canvas>
+            <p style="text-align:center; font-size:20px;">Website Usage</p>
+            <canvas id="websiteUsageCanvas"></canvas>
         </div>
     </div>
 </div>
