--- a/overlay.html
+++ b/overlay.html
@@ -1,4 +1,4 @@
-<div id="overlayDiv" style="position: fixed; top:0; left:0; width:100%; height: 100%; z-index:9999; pointer-events: none;">
+<div id="overlayDiv" style="position: fixed; top:0; left:0; width:100%; height: 100%; z-index:9999; pointer-events: none; transform: scale(1); transform-origin: bottom left;">
     <div id="catContainer" style="position:fixed; bottom:0; width:250px; height:230px;">
         <img id="catImage" src="" style="width:200px; height:200px; pointer-events:auto;">
         <img id="catMenuOpener" src="" style="display:none; width:64px; height:64px; position:absolute; left:180px; bottom:150px; pointer-events:auto;">
@@ -12,18 +12,26 @@
         </div>
     </div>
 
-    <div id="statsMenu" style="display:none; position:absolute; bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center; justify-content: center; align-items: center; pointer-events:auto; cursor: move;">
+    <div id="statsMenu" style="display:none; position:absolute; left: 50px;  bottom:300px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center; justify-content: center; align-items: center; pointer-events:auto; cursor: move;">
         <div id="statsInterior" style="overflow-y:auto; width:300px; height:250px; margin-top:40px; display:flex; flex-direction:column; align-items:center; pointer-events:auto;">
             <p style="text-align:center; font-size:30px;">Statistics</p>
             <p style="margin-top: -20px; text-align:center; font-size:20px;">Your Top Websites Today</p>
             <ul id="time-list" style="margin-top: -10px; ">
-                <!-- This will be filled with time spent on websites -->
+                <!-- this will be filled with time spent on websites -->
             </ul>
             <p style="text-align:center; font-size:30px;">Weekly Breakdown</p>
             <p style="text-align:center; font-size:20px;">Hours Spent Online</p>
             <canvas id="weekChartCanvas"></canvas>
             <p style="text-align:center; font-size:20px;">Website Usage</p>
             <canvas id="websiteUsageCanvas"></canvas>
+        </div>
+    </div>
+
+    <div id="settingsMenu" style="display:none; position:absolute; bottom:350px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center; justify-content: center; align-items: center; pointer-events:auto; cursor: move;">
+        <div id="settingsInterior" style="overflow-y:auto; width:300px; height:250px; margin-top:40px; display:flex; flex-direction:column; align-items:center; pointer-events:auto;">
+            <p style="text-align:center; font-size:30px;">Settings</p>
+            <p style="margin-top: -20px; text-align:center; font-size:20px;">Change Extension Scale</p>
+            <input type="range" min="25" max="200" value="100" class="slider" id="divScaling">
         </div>
     </div>
 </div>
