--- a/overlay.html
+++ b/overlay.html
@@ -20,9 +20,10 @@
                 <!-- this will be filled with time spent on websites -->
             </ul>
             <p style="text-align:center; font-size:30px;">Weekly Breakdown</p>
-            <p style="text-align:center; font-size:20px;">Hours Spent Online</p>
+            <b style="text-align:center; font-size:20px;">Hours Spent Online</b>
             <canvas id="weekChartCanvas"></canvas>
-            <p style="text-align:center; font-size:20px;">Website Usage</p>
+            <p id="cumulWeekTime" style="text-align:center; font-size:13px;">Cumulative time: 0 Minutes</p>
+            <b style="text-align:center; font-size:20px;">Website Usage</b>
             <canvas id="websiteUsageCanvas"></canvas>
         </div>
     </div>
