added new logo and background
test update

--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
   <!-- official KSU colors gold #FFC425 and black #231F20 -->
 
 <p align="center"> <br>
-<img src="images/logo.png" alt="CatTracker" width="473">
-  <h1>College of Computing and Software Engineering 
+<img src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
+  <h1>SP-17 - Red Chrome Extension
     </h1>
 </header>
 <nav>
 
 
 <ul>
-  <li>Fall 2021  </li><br>
-  <li><a href="index.html">CS 3305</a></li><br>
-  <li><a href="index.html">CS 3503</a></li><br>
-  <li><a href="index.html">CS 4308</a></li><br>
-  <li><a href="index.html">CS 4412</a></li><p>    
+    <!-- left side index-->
+  <li>Documents  </li><br>
+  <li><a href="index.html">Final Report</a></li><br>
+  <li><a href="https://github.com/SP17-RedChromePlugin/SP17-CatTracker">GitHub Repository</a></li><br>
+  <li><a href="index.html">Final Presentation Video</a></li><br>
+  <!-- to add more: <li><a href="index.html">text</a></li><p>  -->  
   
   <!-- <li><a href = "mailto: abc@example.com">Email me.</a></li><br>  -->
   <br><p>
@@ -55,7 +56,7 @@ If you are a student, please login to D2L for the course Syllabus and other cont
   </div>
 </main>
   
-<footer>Copyright &copy; 2021 Kennesaw State University<br>
+<!-- <footer>Copyright &copy; 2021 Kennesaw State University<br> -->
 
 <br>
 </footer>
