--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Kennesaw State University </title>
+<title> SP-17 -- Red Chrome Extension </title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="mystyles.css">
 <meta name="robots" content="noindex, no follow, noarchive" />
-<meta name="author" content="Sharon Perry" />
+<meta name="author" content="Ashley Nestor & Devin Beck" />
 </head>
 <body>
 <div id="wrapper">
@@ -15,7 +15,7 @@
 
 <p align="center"> <br>
 <img src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
-  <h1>SP-17 - Red Chrome Extension
+  <h1>SP-17 -- Red Chrome Extension
     </h1>
 </header>
 <nav>
