colors update + finalVideo and finalReport files created

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> SP-17 -- Red Chrome Extension </title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="mystyles.css">
-<meta name="robots" content="noindex, no follow, noarchive" />
+<!-- <meta name="robots" content="noindex, no follow, noarchive" /> -->
 <meta name="author" content="Ashley Nestor & Devin Beck" />
 </head>
 <body>
@@ -24,9 +24,9 @@
 <ul>
     <!-- left side index-->
   <li>Documents  </li><br>
-  <li><a href="index.html">Final Report</a></li><br>
+  <li><a href="finalReport.html">Final Report</a></li><br>
   <li><a href="https://github.com/SP17-RedChromePlugin/SP17-CatTracker">GitHub Repository</a></li><br>
-  <li><a href="index.html">Final Presentation Video</a></li><br>
+  <li><a href="finalVideo.html">Final Presentation Video</a></li><br>
   <!-- to add more: <li><a href="index.html">text</a></li><p>  -->  
   
   <!-- <li><a href = "mailto: abc@example.com">Email me.</a></li><br>  -->
@@ -37,8 +37,9 @@
 </nav>
 <main>   
 <h2>Ashley Nestor and Devin Beck</h2>
-<img src="images/catsitting.png" alt="cat sit" width="110">
-<p><span class="resort">This semester I am teaching the following courses:</p>
+<!-- <img src="images/catsitting.png" alt="cat sit" width="110"> -->
+<p> Hello this is temporary text!
+    <!-- <span class="resort"> This semester I am teaching the following courses:</p>
 <ul>
   <li>CS 3305 Data Structures</li>
   <li>CS 3503 Computer Org and Arch
@@ -48,7 +49,7 @@
 If you are a student, please login to D2L for the course Syllabus and other content.<p>
   <div class="clear">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
-  I am KSU Alumni - Go Owls ! <p>
+  I am KSU Alumni - Go Owls ! <p> -->
         
   <br>
   <br>
