text update + check of colors
(why are the colors not showing up like i set them to AAAAA)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
 <main>   
 <h2>Ashley Nestor and Devin Beck</h2>
 <!-- <img src="images/catsitting.png" alt="cat sit" width="110"> -->
-<p> Hello this is temporary text!
+<p> Hello this is temporary text! I am writing more to fill more area because the space
+     looks awkward and hopefully that will end soon.
+<ul> How does this work? 
+    <li>This is an item in a list</li>
+    <li>Cat</li>
+    <li>Cat2</li>
+    <li>Cat3</li>
+
+</ul>
     <!-- <span class="resort"> This semester I am teaching the following courses:</p>
 <ul>
   <li>CS 3305 Data Structures</li>
