colors update + team photos

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 
 </nav>
 <main>   
-<h2>Ashley Nestor and Devin Beck</h2>
+<h2>The CatTracker Team</h2>
 <!-- <img src="images/catsitting.png" alt="cat sit" width="110"> -->
+<img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:128px;height:128px;">
+<img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:128px;height:128px;">
 <p> Hello this is temporary text! I am writing more to fill more area because the space
      looks awkward and hopefully that will end soon.
 <ul> How does this work? 
