--- a/index.html
+++ b/index.html
@@ -37,9 +37,17 @@
 </nav>
 <main>   
 <h2>The CatTracker Team</h2>
-<!-- <img src="images/catsitting.png" alt="cat sit" width="110"> -->
-<img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:35%;height:35%;">
-<img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:45%;height:45%;">
+
+<!-- team member photos -->
+ <div style="text-align: conter;">
+    <img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:35%;height:35%;">
+    <img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:45%;height:45%;">
+</div>
+
+<h1>Ashley Nestor</h1>
+<h1>Devin Beck</h1>
+
+<!-- text below team member photos -->
 <br>
 <p> Hello this is temporary text! I am writing more to fill more area because the space
      looks awkward and hopefully that will end soon.
