update image size + new color!!!

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <h2>The CatTracker Team</h2>
 
 <!-- team member photos -->
- <div style="text-align: conter;">
-    <img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:35%;height:35%;">
-    <img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:45%;height:45%;">
+ <div style="text-align: center;">
+    <img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:40%;height:40%;">
+    <img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:40%;height:40%;">
 </div>
 
 <h1>Ashley Nestor</h1>
