color update + page layout

--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
 <h2>The CatTracker Team</h2>
 
 <!-- team member photos -->
- <div style="text-align: center;">
-    <img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:40%;height:40%;">
-    <img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:40%;height:40%;">
-</div>
+<div style="display: flex; justify-content: center; gap: 20px;">
+    <figure style="text-align: center;">
+        <img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:35%;height:35%;">
+        <figcaption>Ashley Nestor<br>Team Lead and Developer</figcaption>
+    </figure>
 
-<h1>Ashley Nestor</h1>
-<h1>Devin Beck</h1>
+    <figure style="text-align: center;">
+        <img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:45%;height:45%;">
+        <figcaption>Devin Beck<br>Lead Developer</figcaption>
+    </figure>
+</div>
 
 <!-- text below team member photos -->
 <br>
