colors and images update

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 
 </nav>
 <main>   
-<h2><figure style="text-align: center;"></figure>The CatTracker Team</h2>
+<h2 style="text-align: center;">The CatTracker Team</h2>
 
 <!-- team member photos -->
 <div style="display: flex; justify-content: center; gap: 20px;">
     <figure style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-        <img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:45%;height:45%;">
-        <figcaption>Ashley Nestor<br>Team Member 1</figcaption>
+        <img src="images/AshleyHeadshot.png" alt="Ashley Nestor Headshot" style="width:45%;">
+        <figcaption>Ashley Nestor<br>Team Lead and Developer</figcaption>
     </figure>
 
     <figure style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-        <img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:45%;height:45%;">
-        <figcaption>Devin Beck<br>Team Member 2</figcaption>
+        <img src="images/DevinHeadshot.png" alt="Devin Beck Headshot" style="width:45%;">
+        <figcaption>Devin Beck<br>Head Developer</figcaption>
     </figure>
 </div>
 
