--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <ul>
     <!-- left side index-->
   <li>Documents  </li><br>
+  <li><a href="index.html">Homepage</a></li><br>
   <li><a href="finalReport.html">Final Report</a></li><br>
   <li><a href="https://github.com/SP17-RedChromePlugin/SP17-CatTracker">GitHub Repository</a></li><br>
   <li><a href="finalVideo.html">Final Presentation Video</a></li><br>
