--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> SP-17 -- Red Chrome Extension </title>
+<title> SP-17 – Red Chrome Extension </title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="mystyles.css">
 <!-- <meta name="robots" content="noindex, no follow, noarchive" /> -->
@@ -54,6 +54,8 @@
 
 <!-- text below team member photos -->
 <br>
+
+<h2>Header Text</h2>
 <p> Hello this is temporary text! I am writing more to fill more area because the space
      looks awkward and hopefully that will end soon.
 <ul> How does this work? 
