pdf and video functionality

--- a/finalReport.html
+++ b/finalReport.html
@@ -35,6 +35,12 @@
 
 <p> Hello this is temporary text! Here will hopefully be the final report
 
+    <object class="pdf" 
+            data=
+            "pdfs/SP-17 - Chrome Plugin Red - ProjectPlan.pdf"
+            width="800"
+            height="500">
+    </object>
   <br>
   </div>
 </main>
