video and break statement update

--- a/finalReport.html
+++ b/finalReport.html
@@ -33,7 +33,9 @@
 <main>   
 <h2>Final Report</h2>
 
-<p> Hello this is temporary text! Here will hopefully be the final report
+<p> Hello this is temporary text! Here will  be the final report. 
+    (temporarily the project plan documentation)
+    <br>
 
     <object class="pdf" 
             data=
