--- a/finalVideo.html
+++ b/finalVideo.html
@@ -34,9 +34,15 @@
 <h2>Final Presentation Video</h2>
 
 <p> Hello this is temporary text! Here will hopefully be the final presentation video.
+    (temporarily the prototype video)
+<br>
 
 <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=R9QeHXaMHPQ">
+src="https://www.youtube.com/watch?v=R9QeHXaMHPQ"
+title="CatTracker Video" 
+frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+allowfullscreen>>
 </iframe>
 
   <br>
