--- a/finalReport.html
+++ b/finalReport.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> SP-17 – Red Chrome Extension </title>
+<title> SP-17 — Red Chrome Extension </title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="mystyles.css">
 <meta name="author" content="Ashley Nestor & Devin Beck" />
