--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> SP-17 – Red Chrome Extension </title>
+<title> SP-17 — Red Chrome Extension </title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="mystyles.css">
 <!-- <meta name="robots" content="noindex, no follow, noarchive" /> -->
