video + em dash update

--- a/finalReport.html
+++ b/finalReport.html
@@ -12,7 +12,7 @@
 
 <p align="center"> <br>
 <img src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
-  <h1>SP-17 -- Red Chrome Extension
+  <h1>SP-17 — Red Chrome Extension
     </h1>
 </header>
 <nav>
@@ -35,7 +35,7 @@
 
 <p> Hello this is temporary text! Here will  be the final report. 
     (temporarily the project plan documentation)
-    <br>
+    <br><br><br>
 
     <object class="pdf" 
             data=
