--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <p align="center"> <br>
 <img src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
-  <h1>SP-17 -- Red Chrome Extension
+  <h1>SP-17 — Red Chrome Extension
     </h1>
 </header>
 <nav>
