--- a/finalVideo.html
+++ b/finalVideo.html
@@ -12,7 +12,7 @@
 
 <p align="center"> <br>
 <img src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
-  <h1>SP-17 -- Red Chrome Extension
+  <h1>SP-17 — Red Chrome Extension
     </h1>
 </header>
 <nav>
@@ -35,14 +35,10 @@
 
 <p> Hello this is temporary text! Here will hopefully be the final presentation video.
     (temporarily the prototype video)
-<br>
+<br><br><br>
 
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=R9QeHXaMHPQ"
-title="CatTracker Video" 
-frameborder="0" 
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-allowfullscreen>>
+<iframe width="480" height="500"
+src="https://www.youtube.com/embed/R9QeHXaMHPQ">
 </iframe>
 
   <br>
