video embed update

--- a/finalVideo.html
+++ b/finalVideo.html
@@ -5,6 +5,17 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="mystyles.css">
 <meta name="author" content="Ashley Nestor & Devin Beck" />
+
+<!-- styling for youtube container -->
+<style>
+    .videoContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 20px 0;
+    }
+  </style>
+
 </head>
 <body>
 <div id="wrapper">
@@ -37,9 +48,12 @@
     (temporarily the prototype video)
 <br><br><br>
 
-<iframe width="480" height="500"
-src="https://www.youtube.com/embed/R9QeHXaMHPQ">
+<div class="videoContainer">
+<iframe width="560" height="315"
+src="https://www.youtube.com/embed/R9QeHXaMHPQ"
+frameborder="0">
 </iframe>
+</div>
 
   <br>
   </div>
