--- a/index.html
+++ b/index.html
@@ -54,17 +54,12 @@
 
 <!-- text below team member photos -->
 <br>
+<p align="center">4850-03 Fall 2024</p>
+<p align="center">Advisor Sharon Perry</p>
 
-<h2>Header Text</h2>
-<p> Hello this is temporary text! I am writing more to fill more area because the space
-     looks awkward and hopefully that will end soon.
-<ul> How does this work? 
-    <li>This is an item in a list</li>
-    <li>Cat</li>
-    <li>Cat2</li>
-    <li>Cat7563</li>
+<h2>CatTracker Overview</h2>
+<p> Hello this is temporary text!
 
-</ul>
     <!-- <span class="resort"> This semester I am teaching the following courses:</p>
 <ul>
   <li>CS 3305 Data Structures</li>
