break statement update 2
electric boogaloo

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
 </div>
 
 <!-- text below team member photos -->
-<p align="center">4850-03 Fall 2024</p>
-<p align="center">Advisor Sharon Perry</p>
-<br>
+<p align="center">4850-03 Fall 2024<br>Advisor Sharon Perry</p>
 
 <h2>CatTracker Overview</h2>
 <p> Hello this is temporary text!
