--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <p align="center">4850-03 Fall 2024<br>Advisor Sharon Perry</p>
 
 <h2>CatTracker Overview</h2>
-<p> Hello this is temporary text!
+<p> Hello this is temporary text!1
 
     <!-- <span class="resort"> This semester I am teaching the following courses:</p>
 <ul>
