--- a/overlay.html
+++ b/overlay.html
@@ -32,6 +32,7 @@
         <div id="settingsInterior" style="overflow-y:auto; width:300px; height:250px; margin-top:40px; display:flex; flex-direction:column; align-items:center; pointer-events:auto;">
             <p style="text-align:center; font-size:30px;">Settings</p>
             <p style="margin-top: -20px; text-align:center; font-size:20px;">Add Alarm</p>
+            <input type="text" id="falarm" name="falarm"><br><br>
             <button>Add</button>
             <p style="text-align:center; font-size:20px;">Change Extension Scale</p>
             <input type="range" min="25" max="200" value="100" class="slider" id="divScaling">
