--- a/overlay.html
+++ b/overlay.html
@@ -31,9 +31,16 @@
     <div id="settingsMenu" style="display:none; position:absolute; bottom:350px; width:400px; height:400px; background-size:cover; background-repeat:no-repeat; background-position:center; justify-content: center; align-items: center; pointer-events:auto; cursor: move;">
         <div id="settingsInterior" style="overflow-y:auto; width:300px; height:250px; margin-top:40px; display:flex; flex-direction:column; align-items:center; pointer-events:auto;">
             <p style="text-align:center; font-size:30px;">Settings</p>
+            <p style="margin-top: -20px; text-align:center; font-size:20px;">Current Alarms</p>
+            <ul id="alarm-list" style="margin-top: -10px; ">
+                <!-- this will be filled with alarms -->
+            </ul>
+            <hr><br>
             <p style="margin-top: -20px; text-align:center; font-size:20px;">Add Alarm</p>
-            <input type="text" id="falarm" name="falarm"><br><br>
-            <button>Add</button>
+            <input type="text" id="fnewalarmname" name="fnewalarmname"><br>
+            <input type="date" id="fnewalarmdate" name="fnewalarmdate"><br>
+            <input type="time" id="fnewalarmtime" name="fnewalarmtime"><br>
+            <button id="addAlarmButton">Add</button>
             <p style="text-align:center; font-size:20px;">Change Extension Scale</p>
             <input type="range" min="25" max="200" value="100" class="slider" id="divScaling">
         </div>
