reminders now save, can reset data, formatting fixes

--- a/overlay.html
+++ b/overlay.html
@@ -42,7 +42,9 @@
             <input type="time" id="fnewalarmtime" name="fnewalarmtime"><br>
             <button id="addAlarmButton">Add</button>
             <p style="text-align:center; font-size:20px;">Change Extension Scale</p>
-            <input type="range" min="25" max="200" value="100" class="slider" id="divScaling">
+            <input type="range" min="25" max="200" value="100" class="slider" id="divScaling"><br>
+            <p style="text-align:center; font-size:20px;">Clearing Data</p>
+            <button id="resetButton">Delete Saved Data</button><br>
         </div>
     </div>
 </div>
