updated file organization

--- a/tabs/finalReport.html
+++ b/tabs/finalReport.html
@@ -33,13 +33,11 @@
 <main>   
 <h2>Final Report</h2>
 
-<p> Hello this is temporary text! Here will  be the final report. 
-    (temporarily the project plan documentation)
     <br><br><br>
 
     <object class="pdf" 
             data=
-            "pdfs/SP-17 - Chrome Plugin Red - ProjectPlan.pdf"
+            "pdfs/SP-17 - Red Chrome Extension - Final Report.pdf"
             width="800"
             height="500">
     </object>
