--- a/tabs/finalVideo.html
+++ b/tabs/finalVideo.html
@@ -51,7 +51,9 @@
 <div class="videoContainer">
 <iframe width="560" height="315"
 src="https://www.youtube.com/embed/R9QeHXaMHPQ"
-frameborder="0">
+frameborder="0"
+allow="fullscreen"
+allowfullscreen>
 </iframe>
 </div>
 
