--- a/tabs/index.html
+++ b/tabs/index.html
@@ -14,7 +14,7 @@
   <!-- official KSU colors gold #FFC425 and black #231F20 -->
 
 <p align="center"> <br>
-<img class="hover" src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
+<img src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
   <h1>SP-17 — Red Chrome Extension
     </h1>
 </header>
@@ -56,7 +56,16 @@
 <p align="center">4850-03 Fall 2024<br>Advisor Sharon Perry</p>
 
 <h2>CatTracker Overview</h2>
-<p> Hello this is temporary text!1
+<p>   In an era where everyone is online more often than ever, 
+  it can be incredibly difficult to manage the amount of time one spends online. 
+  Because of this, limiting time spent on social media platforms and other 
+  attention-hogging websites is vital to our health. Our solution: a cat companion 
+  that lives within your browser.
+      The CatTracker is a web solution that tracks the time its users spend online 
+  and provides a convenient reminder system to keep track of important events and activities. 
+  The CatTracker lives as a downloadable Chrome extension through the Chrome Web Store 
+  utilizing HTML, CSS, and JavaScript as a code base. It can be managed through the 
+  built-in settings menu along with Chrome’s Extension Manager.
 
     <!-- <span class="resort"> This semester I am teaching the following courses:</p>
 <ul>
