--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
 
 <!-- text below team member photos -->
 <p align="center">4850-03 Fall 2024<br>Advisor Sharon Perry</p>
+<p></p>
+
+<head>
+  <style>
+      p {
+          padding-left: 60px;
+      }
+  </style>
+</head>
 
 <h2>CatTracker Overview</h2>
 <p>   In an era where everyone is online more often than ever, 
@@ -61,11 +70,13 @@
   Because of this, limiting time spent on social media platforms and other 
   attention-hogging websites is vital to our health. Our solution: a cat companion 
   that lives within your browser.
-      The CatTracker is a web solution that tracks the time its users spend online 
+</p>
+<p>The CatTracker is a web solution that tracks the time its users spend online 
   and provides a convenient reminder system to keep track of important events and activities. 
   The CatTracker lives as a downloadable Chrome extension through the Chrome Web Store 
   utilizing HTML, CSS, and JavaScript as a code base. It can be managed through the 
   built-in settings menu along with Chrome’s Extension Manager.
+</p>
 
     <!-- <span class="resort"> This semester I am teaching the following courses:</p>
 <ul>
