--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
 <!-- text below team member photos -->
 <p align="center">4850-03 Fall 2024<br>Advisor Sharon Perry</p>
-<p></p>
+<br>
 
 <head>
   <style>
       p {
-          padding-left: 60px;
+        text-indent: 40px;
       }
   </style>
 </head>
