--- a/index.html
+++ b/index.html
@@ -58,25 +58,27 @@
 
 <head>
   <style>
-      p1 {
+      .indent {
         text-indent: 40px;
       }
   </style>
 </head>
 
 <h2>CatTracker Overview</h2>
-<p1>   In an era where everyone is online more often than ever, 
+<div class="indent">
+<p>   In an era where everyone is online more often than ever, 
   it can be incredibly difficult to manage the amount of time one spends online. 
   Because of this, limiting time spent on social media platforms and other 
   attention-hogging websites is vital to our health. Our solution: a cat companion 
   that lives within your browser.
-</p1>
-<p1>The CatTracker is a web solution that tracks the time its users spend online 
+</p>
+<p>The CatTracker is a web solution that tracks the time its users spend online 
   and provides a convenient reminder system to keep track of important events and activities. 
   The CatTracker lives as a downloadable Chrome extension through the Chrome Web Store 
   utilizing HTML, CSS, and JavaScript as a code base. It can be managed through the 
   built-in settings menu along with Chrome’s Extension Manager.
-</p1>
+</p>
+</div>
 
     <!-- <span class="resort"> This semester I am teaching the following courses:</p>
 <ul>
