surely it works this time :clueless:

--- a/index.html
+++ b/index.html
@@ -53,16 +53,8 @@
 </div>
 
 <!-- text below team member photos -->
-<p align="center">4850-03 Fall 2024<br>Advisor Sharon Perry</p>
+<p style="text-align: center;">4850-03 Fall 2024<br>Advisor Sharon Perry</p>
 <br>
-
-<head>
-  <style>
-      .indent {
-        text-indent: 40px;
-      }
-  </style>
-</head>
 
 <h2>CatTracker Overview</h2>
 <div class="indent">
