--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- official KSU colors gold #FFC425 and black #231F20 -->
 
 <p align="center"> <br>
-<img src="images/CatTrackerLogo.png" alt="CatTracker Logo" width="473">
+<img src="images/CatTrackerLogoWithCat.png" alt="CatTracker Logo" width="473">
   <h1>SP-17 — Red Chrome Extension
     </h1>
 </header>
