--- a/finalVideo.html
+++ b/finalVideo.html
@@ -44,13 +44,13 @@
 <main>   
 <h2>Final Presentation Video</h2>
 
-<p> Hello this is temporary text! Here will hopefully be the final presentation video.
-    (temporarily the prototype video)
+<p> Our video presentation gives a general overview of what the CatTracker's main functionalities are, 
+  our development process, and a short demonstration. 
 <br><br>
 
 <div class="videoContainer">
 <iframe width="560" height="315"
-src="https://www.youtube.com/embed/R9QeHXaMHPQ"
+src="https://www.youtube.com/watch?v=Nr_AScjpKfs"
 frameborder="0"
 allow="fullscreen"
 allowfullscreen>
