--- a/finalVideo.html
+++ b/finalVideo.html
@@ -44,13 +44,13 @@
 <main>   
 <h2>Final Presentation Video</h2>
 
-<p> Our video presentation gives a general overview of what the CatTracker's main functionalities are, 
+<p> Our video presentation gives a general overview of what the CatTracker's main functionalities, 
   our development process, and a short demonstration. 
 <br><br>
 
 <div class="videoContainer">
 <iframe width="560" height="315"
-src="https://www.youtube.com/watch?v=Nr_AScjpKfs"
+src="https://www.youtube.com/embed/Nr_AScjpKfs"
 frameborder="0"
 allow="fullscreen"
 allowfullscreen>
