--- a/finalReport.html
+++ b/finalReport.html
@@ -33,6 +33,14 @@
 <main>   
 <h2>Final Report</h2>
 
+<div class="indent">
+  <p> Our full documentation of the CatTracker. This report contains everything from the primary
+    goals of the project, to the general project plans, to our requirement breakdown, to the software development process, 
+    and finally to the testing performed.
+  </p>
+  <br><br>
+  </div>
+
     <object class="pdf" 
             data=
             "pdfs/SP-17 - Red Chrome Extension - Final Report.pdf"
