--- a/finalVideo.html
+++ b/finalVideo.html
@@ -44,9 +44,11 @@
 <main>   
 <h2>Final Presentation Video</h2>
 
+<div class="indent">
 <p> Our video presentation gives a general overview of what the CatTracker's main functionalities, 
-  our development process, and a short demonstration. 
+  our development process, and a short demonstration. </p>
 <br><br>
+</div>
 
 <div class="videoContainer">
 <iframe width="560" height="315"
